# literator

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: literatorConfig.cmake
include/literator/: filter_iterator.hpp  iterator_adaptor.hpp  iterator_facade.hpp  transform_iterator.hpp  zip_iterator.hpp
include/literator/internal/: filter_iterator_base.hpp  iterator_adaptor_base.hpp  iterator_core_access.hpp  iterator_facade_base.hpp  iterator_facade_helpers.hpp  transform_iterator_base.hpp  use_default.hpp  zip_iterator_base.hpp
